# dev_repo

./: .gitignore  .zenith-plan.json  .zenith-progress.md  DEV_RULES.md  PROGRESS.txt  README.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
apps/api/: .env.example  package.json
apps/api/src/: app.test.ts  app.ts  auth.ts  config.ts  index.ts  receipt-verification.ts  repository.ts  server.ts
apps/mobile/: .env.example  App.tsx  app.json  package.json  tsconfig.json
apps/mobile/src/: index.ts
apps/mobile/src/auth/: AuthSessionProvider.tsx
apps/mobile/src/components/: PrimaryButton.tsx  ScreenFrame.tsx
apps/mobile/src/hooks/: useApiClient.ts  useCategoryOptionsQuery.ts  useFeedPreviewQuery.ts  usePostComposer.ts  useProfileQueries.ts  useSocialActions.ts
apps/mobile/src/lib/: api.ts
apps/mobile/src/navigation/: index.tsx
apps/mobile/src/providers/: AppProviders.tsx
apps/mobile/src/screens/: AuthScreens.tsx  MainScreens.tsx  OnboardingScreens.tsx
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
apps/web/app/[category]/: page.tsx
apps/web/app/search/: page.tsx
apps/web/src/: index.ts  next-shim.d.ts
apps/web/src/components/: CategoryNav.tsx  DownloadAppBanner.tsx  EmptyState.tsx  PostCard.tsx  SearchForm.tsx  SiteHeader.tsx
docs/: beta-release.md  design.md  plan.md  technical.md
ideas/: README.md
scripts/: dev-stub.mjs  lint-workspace.mjs  workspace.test.mjs
tests/: test_main.py
(+3 files in other folders)
